index.html & css - expect ready button iOS bug

--- a/index.css
+++ b/index.css
@@ -105,6 +105,10 @@ input[type='number'] {
 	display: block;
 }
 
+#ItemPlacementVote {
+	display: none;
+}
+
 #LookAtScreen {
 	display: none;
 }
@@ -310,6 +314,19 @@ input[type='number'] {
 	padding-top: 0.9vmin;
 }
 
+#itemCarouselLayout {
+	height: 45vmin;
+	width: 96vmin;
+	clip-path: inset(0vmin);
+	position: relative;
+}
+#itemPositionButtonsLayout {
+	width: 96vmin;
+}
+#itemPositionButtonsPanel {
+	width: 96vmin;
+}
+
 .spacer {
 	width: 2vmin;
 	height: 2vmin;
@@ -400,6 +417,17 @@ input[type='number'] {
 	left: 0;
 	width: 100%;
 	height: 100%;
+	background-size: 100%;
+}
+
+.itemPreviewImage {
+	position: relative;
+	top: 4%;
+	right: 4%;
+	bottom: 4%;
+	left: 4%;
+	width: 92%;
+	height: 92%;
 	background-size: 100%;
 }
 
@@ -681,6 +709,21 @@ input[type='number'] {
 	margin-top: -12vmin;
 	z-index: 1 !important;
 }
+.readyButtonActionInput {
+	margin-bottom: 0 !important;
+	padding-left: 10vmin !important;
+	padding-right: 10vmin !important;
+	padding-top: 2vmin !important;
+	padding-bottom: 2vmin !important;
+}
+.readyButtonItemVote {
+	margin-top: 1vmin !important;
+	margin-bottom: 0 !important;
+	padding-left: 10vmin !important;
+	padding-right: 10vmin !important;
+	padding-top: 2vmin !important;
+	padding-bottom: 2vmin !important;
+}
 
 .readyButtonPressed {
 	pointer-events: none;
@@ -754,7 +797,7 @@ input[type='number'] {
 
 .enterBounceAnimated {
 	animation: enterBounceAnimation 0.7s ease-in-out;
-	animation-fill-mode: both;
+	animation-fill-mode: backwards;
 }
 
 .animDelay1 {
@@ -1009,6 +1052,18 @@ input[type='number'] {
 	transition: 0.03s;
 }
 
+.itemPreview {
+	background-color: rgba(255, 255, 255, 1);
+	border-radius: 3.5vmin;
+	pointer-events: none;
+}
+.itemPreview.selectedItem {
+	background-color: rgba(255, 255, 255, 1);
+	border-radius: 3.5vmin;
+	box-shadow: 0 0.7vmin rgb(0, 134, 94, 0.4), 0 1.5vmin rgb(0, 194, 136);
+	pointer-events: none;
+}
+
 .unselectedButton {
 	pointer-events: none;
 	opacity: 0.25;
@@ -1219,6 +1274,7 @@ input[type='number'] {
 
 .titleText {
 	color: white;
+	text-shadow: black 0px 0px 2px;
 	font-family: 'Atkinson Hyperlegible', sans-serif;
 	font-weight: bold;
 	margin-top: 1.8vmin;
@@ -1232,10 +1288,28 @@ input[type='number'] {
 
 .infoText {
 	color: white;
+	text-shadow: black 0px 0px 2px;
 	font-family: 'Atkinson Hyperlegible', sans-serif;
 	font-weight: bold;
 	font-size: 4vmin;
 	margin: 0px;
+	-webkit-user-select: none; /* Chrome all / Safari all */
+	-moz-user-select: none; /* Firefox all */
+	-ms-user-select: none; /* IE 10+ */
+	user-select: none;
+}
+
+.actionButtonInnerText {
+	position: absolute;
+	left: 1vmin;
+	right: 1vmin;
+	bottom: 1vmin;
+	color: white;
+	vertical-align: text-bottom;
+	/* text-shadow: black 0px 0px 2px; */
+	font-family: 'Atkinson Hyperlegible', sans-serif;
+	font-weight: bold;
+	font-size: 4vmin;
 	-webkit-user-select: none; /* Chrome all / Safari all */
 	-moz-user-select: none; /* Firefox all */
 	-ms-user-select: none; /* IE 10+ */
@@ -1411,11 +1485,6 @@ input[type='number'] {
 	transform: scale(0.9);
 }
 
-.actionButtonDisabled {
-	pointer-events: none;
-	opacity: 0.3;
-}
-
 .actionButtonInner {
 	position: absolute;
 	/* background-color: rgb(250, 199, 139); */
@@ -1426,6 +1495,19 @@ input[type='number'] {
 	left: 1vmin;
 	border-radius: 1vmin;
 	border: 0.4vmin solid black;
+}
+
+.actionButtonInnerTextLayout {
+	position: absolute;
+	align-content: center;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	display: flex;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
 }
 
 .actionButtonWithLabel {
@@ -1466,6 +1548,14 @@ input[type='number'] {
 .actionButtonSelected .actionButtonInner {
 	/* background-color: rgba(255, 255, 255, 0.9) !important; */
 	border-color: white;
+}
+
+.actionButtonItemPosition {
+	/* width: 15vmin !important; */
+	background-color: rgb(0, 134, 94);
+}
+.actionButtonItemPosition .actionButtonInner {
+	background-color: rgb(0, 194, 136);
 }
 
 .disabledButton {
@@ -1518,8 +1608,11 @@ input[type='number'] {
 .arrowButton {
 	background-image: url(Images/IconImages/Icon_Arrow1_128.png);
 	background-size: cover;
-	width: 15vmin;
-	height: 15vmin;
+	background-repeat: no-repeat;
+	width: 16vmin;
+	height: 16vmin;
+	padding: 5vmin;
+	background-origin: content-box;
 	cursor: pointer;
 	transition: 0.03s;
 }
@@ -1550,7 +1643,7 @@ input[type='number'] {
 
 .defaultBlur {
 	background-color: rgba(0, 27, 41, 0.4);
-	backdrop-filter: blur(3vmin);
+	backdrop-filter: blur(4vmin);
 }
 
 .darkBlur {
@@ -1622,13 +1715,15 @@ input[type='number'] {
 }
 
 .fadeInAnimated {
-	animation: fadeAnimation 0.2s both;
+	animation: fadeAnimation 0.2s;
 	animation-delay: 0.15s;
+	animation-fill-mode: backwards;
 }
 
 .fadeInQuickAnimated {
-	animation: fadeAnimation 0.1s both;
+	animation: fadeAnimation 0.1s;
 	animation-delay: 0s;
+	animation-fill-mode: backwards;
 }
 
 @keyframes fadeAnimation {
@@ -1707,6 +1802,11 @@ input[type='number'] {
 @media (orientation: portrait) {
 	html {
 		--scaleMult: 1;
+	}
+
+	.spacerInPortrait {
+		width: 2vmin;
+		height: 2vmin;
 	}
 
 	.multiturnHeader {
@@ -1880,12 +1980,17 @@ input[type='number'] {
 		margin-left: 0vmin;
 	}
 
-	#readyButton {
-		margin-top: -25vmin !important;
-		margin-left: 66vmin;
+	.spacerInLandscape {
+		width: 2vmin;
+		height: 2vmin;
 	}
 
-	#unreadyButton {
+	.readyButtonActionInput {
+		margin-top: -25vmin !important;
+		margin-left: 66vmin !important;
+	}
+	.unreadyButtonActionInput {
+		margin-top: -25vmin !important;
 		margin-left: 110vmin !important;
 	}
 
